kingsroom page spacing fix on mobile

--- a/src/pages/thekingsroom/tkr.module.scss
+++ b/src/pages/thekingsroom/tkr.module.scss
@@ -11,7 +11,7 @@
        }
    
        @media screen and (max-width: 40em) {
-          padding: 100px 46px;
+          padding: 5.5rem 0;
           
      }
 
